update comment, dbconfig mysql2

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,19 @@ MYSQL_HOST=db
 MYSQL_PORT=3306
 MYSQL_DATABASE=myapp
 
+
+# ------------------------------
+# REDIS
+# ------------------------------
 REDIS_URL=redis://redis:6379/0
-#REDIS_HOST=localhost
 REDIS_HOST=redis
 REDIS_PORT=6379
 
+REDIS_FOR_HEAVY_HOST=redis
+REDIS_FOR_HEAVY_PORT=6378
+
 REDIS_CACHE_HOST=redis_cache
 REDIS_CACHE_PORT=6379
+
+REDIS_FOR_HEAVY_CACHE_HOST=redis_cache
+REDIS_FOR_HEAVY_CACHE_PORT=6378
