--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,29 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_bin
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 10 } %>   
+  username: <%= ENV.fetch("MYSQL_USER", "root") %>
+  password: <%= ENV.fetch("MYSQL_PASSWORD", "root") %>
+  host: <%= ENV.fetch("MYSQL_HOST", "db") %>
+  port: <%= ENV.fetch("MYSQL_PORT", "3306") %>
+  timeout: false
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch("MYSQL_DATABASE", "myapp") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= ENV.fetch("MYSQL_TEST_DATABASE", "myapp_test") %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV["MYSQL_DATABASE"] %>
+  reconnect: false
